kubernetes/manual/frigate/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  selector:
    matchLabels:
      app: frigate
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      nodeSelector:
        frigate: allowed
      volumes:
        - name: frigate-config
          nfs:
            path: /mnt/ssd/frigate/config
            server: 10.10.3.2
        - name: frigate-recordings
          nfs:
            path: /mnt/ssd/frigate/recordings
            server: 10.10.3.2
        - name: frigate-ram-cache
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
        - name: frigate-ram-cameras
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
        # Add GPU device mount
        - name: dri
          hostPath:
            path: /dev/dri
      restartPolicy: Always
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.15.1
          imagePullPolicy: Always
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "1"
              memory: 1G
          ports:
            - containerPort: 8971
              name: frigate
          volumeMounts:
            - mountPath: /config
              name: frigate-config
            - mountPath: /media/frigate
              name: frigate-recordings
            - mountPath: /tmp/cache
              name: frigate-ram-cache
            - mountPath: /dev/shm
              name: frigate-ram-cameras
            # Add GPU device mount
            - mountPath: /dev/dri
              name: dri
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  type: ClusterIP
  ports:
    - name: frigate
      port: 8971
      targetPort: 8971
  selector:
    app: frigate
